Se agregó validación para evitar eliminar conceptos relacionados con otros.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
@@ -48,9 +48,9 @@
                 <thead class="thead-dark">
                     <tr>
                         <th>Tip.Concepto</th>
-                        <th>Cod.Concepto</th>
                         <th>Descripción</th>
                         <th>Valor</th>
+                        <th>Aplica a</th>
                         <th>Estado</th>
                         <th></th>
                         <th></th>
@@ -59,9 +59,9 @@
                 <tfoot>
                     <tr>
                         <th>Tip.Concepto</th>
-                        <th>Cod.Concepto</th>
                         <th>Descripción</th>
                         <th>Valor</th>
+                        <th>Aplica a</th>
                         <th>Estado</th>
                         <th></th>
                         <th></th>
@@ -147,9 +147,9 @@
             },
             columns: [
                 { data: 'tipoConceptoDesc' },
-                { data: 'conceptoCod' },
                 { data: 'conceptoDesc' },
                 { data: 'valorConceptoFormateado' },
+                { data: 'descFiltro' },
                 { data: 'estaHabilitado' },
                 { data: 'plantillaPlanillaConceptoID' },
                 { data: 'plantillaPlanillaConceptoID' }
