--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_MantenimientoAsignacionConcepto.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_MantenimientoAsignacionConcepto.cshtml
@@ -87,9 +87,9 @@
     <div class="form-row" style="display: none;" id="divConceptoPorcentaje">
         <div class="col-12">
             <div class="form-group row">
-                @Html.LabelFor(model => model.conceptoPorcentajeID, new { @class = "col-sm-3 control-label" })
+                @Html.LabelFor(model => model.conceptoReferenciaID, new { @class = "col-sm-3 control-label" })
                 <div class="col-sm-9">
-                    @Html.DropDownListFor(model => model.conceptoPorcentajeID, ViewBag.ListaConceptosIncluidos as SelectList, "[ SELECCIONAR ]", new { @class = "select-multiple form-control text-uppercase", multiple = "true" })
+                    @Html.DropDownListFor(model => model.conceptoReferenciaID, ViewBag.ListaConceptosIncluidos as SelectList, "[ SELECCIONAR ]", new { @class = "select-multiple form-control text-uppercase", multiple = "true" })
                 </div>
             </div>
         </div>
@@ -122,6 +122,11 @@
         @if(Model.valorEsExterno)
         {
             <text>cambiarEstadoCampoMonto(false);</text>
+        }
+
+        @if (!Model.esValorFijo)
+        {
+            <text>mostrarPorcetual(true);</text>
         }
 
         $('#content-body').on('click', '#btn-return', function (event) {
