Avance carga de archivo con valores para conceptos externos

--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<WebApp.Models.ConceptoModel>
-@using GridMvc.Html
 
 <div class="container-fluid">
     <div class="col-12 mb-4">
@@ -154,8 +153,11 @@
                     aria: {
                         sortAscending: ": activar para ordenar la columna en orden ascendente",
                         sortDescending: ": activar para ordenar la columna en orden descendente"
-                    }
-                }
+                    },
+                    loadingRecords: "Cargando...",
+                    processing: "Procesando..."
+                },
+                searching: true
             });
         }
 
@@ -229,8 +231,11 @@
                     aria: {
                         sortAscending: ": activar para ordenar la columna en orden ascendente",
                         sortDescending: ": activar para ordenar la columna en orden descendente"
-                    }
-                }
+                    },
+                    loadingRecords: "Cargando...",
+                    processing: "Procesando..."
+                },
+                searching: true
             });
         }
     </script>
