--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
@@ -215,8 +215,11 @@
                 aria: {
                     sortAscending: ": activar para ordenar la columna en orden ascendente",
                     sortDescending: ": activar para ordenar la columna en orden descendente"
-                }
-            }
+                },
+                loadingRecords: "Cargando...",
+                processing: "Procesando..."
+            },
+            searching: true
         });
     }
 
