--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -7,7 +7,10 @@
                 <i class="fa fa-fw fa-refresh"></i> Operaciones<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="operations" class="collapse">
-                <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa fa-users"></i> Consulta trabajadores</a></li>
+                <li><a href="@Url.Action("Index", "Trabajadores")"><i class="fa fa-users"></i> Gestión trabajadores</a></li>
+            </ul>
+            <ul id="operations" class="collapse">
+                <li><a href="@Url.Action("Index", "ConceptosExternos")"><i class="fa fa-cloud-upload"></i> Cargar información externa</a></li>
             </ul>
             <ul id="operations" class="collapse">
                 <li><a href="@Url.Action("Generar", "Planillas")"><i class="fa fa-table"></i> Generar planillas</a></li>
