--- a/src/app/00078-GestionPlanillas/WebApp/Views/ConceptosExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ConceptosExternos/Index.cshtml
@@ -27,8 +27,8 @@
             {
                 <form id="form-upload" name="form-upload" class="form-inline" enctype="multipart/form-data">
                     <div class="form-group mr-2">
-                        <label class="control-label" for="input_file">Seleccione archivo</label>
-                        <input type="file" class="form-control-file" id="input_file" name="input_file" />
+                        <label class="control-label" for="inputFile">Seleccione archivo</label>
+                        <input type="file" class="form-control-file" id="inputFile" name="inputFile" />
                     </div>
                     <div class="form-group mr-2">
                         @Html.AntiForgeryToken()
