--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -190,6 +190,12 @@
                         render: function (data, type, row) {
                             return row.tipoDocumentoDesc + ' (' + row.tipoDocumentoID + ')';
                         }
+                    },
+                    {
+                        targets: 8,
+                        render: function (data, type, row) {
+                            return row.proveedorDesc + ' (' + row.proveedorID + ')';
+                        }
                     }
                 ],
                 bDestroy: true,
