Avance registrar valores externos

--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -154,6 +154,12 @@
                     beforeSend: function () {
                     },
                     success: function (result) {
+                        if (result.success) {
+                            generarDatatableValoresExternos([]);
+                            toastr.success(result.message);
+                        } else {
+                            toastr.error(result.message);
+                        }
                     },
                     error: function (jqXHR, textStatus, errorThrown) {
                         toastr.error(errorThrown);
